--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node ./index.js",
-		"test": "nodemon --inspect ./index.js --idle "
+		"test": "nodemon ./index.js --idle "
 	},
 	"repository": {
 		"type": "git",
@@ -22,10 +22,7 @@
 	},
 	"homepage": "https://github.com/martinza99/Amelie#readme",
 	"dependencies": {
-		"@discordjs/opus": "^0.1.0",
-		"discord.js": "github:discordjs/discord.js",
-		"ffmpeg-static": "^4.1.1",
-		"opusscript": "0.0.7"
+		"discord.js": "github:discordjs/discord.js"
 	},
 	"devDependencies": {
 		"nodemon": "^2.0.2",
