--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node ./index.js",
-		"test": "nodemon ./index.js --idle "
+		"test": "nodemon -r dotenv/config ./index.js --idle "
 	},
 	"repository": {
 		"type": "git",
@@ -25,7 +25,8 @@
 		"discord.js": "github:discordjs/discord.js"
 	},
 	"devDependencies": {
-		"nodemon": "^2.0.2",
-		"eslint": "^6.8.0"
+		"eslint": "^6.8.0",
+		"node-env-run": "^3.0.2",
+		"nodemon": "^2.0.2"
 	}
 }
