--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node ./index.js",
-		"test": "nodemon -r dotenv/config ./index.js"
+		"test": "node -r dotenv/config ./index.js"
 	},
 	"repository": {
 		"type": "git",
